--- a/video.html
+++ b/video.html
@@ -13,17 +13,13 @@
     <link href='style/style.css' rel='stylesheet' type='text/css'/>
 	</head>
 	<body>
-    <a class="sublime zoomable" href="#video1" data-settings="overlay-opacity:0.9">
+    <a class="sublime zoomable" href="#a240e92d" data-settings="overlay-opacity:0.9">
       <img src="images/button1.png" width="320" height="180" />
       <span class="zoom_icon"></span>
     </a>
-    
-    <video id="video1" data-settings="uid:demo-lightbox-custom-overlay-opacity; autoresize:fit;" title="Demo:     Lightbox, Custom overlay opacity" poster="images/button1.png" width="640" height="360"    preload="none" style="display:none">
-      <source src="https://media.sublimevideo.net/vpa/ms_360p.mp4" />
-      <source src="https://media.sublimevideo.net/vpa/ms_360p.webm" />
-    </video>
 
-    <video id="a240e92d" class="sublime" poster="images/button1.png" width="640" height="360" title="Midnight Sun" data-uid="a240e92d" preload="none">
+
+    <video id="a240e92d" class="sublime" poster="images/button1.png" width="640" height="360" tdata-settings="uid:demo-lightbox-custom-overlay-opacity; autoresize:fit;" title="Demo:     Lightbox, Custom overlay opacity" poster="images/button1.png" width="640" height="360"    preload="none" style="display:none">
       <source src="https://cdn.sublimevideo.net/vpa/ms_360p.mp4" />
       <source src="https://cdn.sublimevideo.net/vpa/ms_720p.mp4" data-quality="hd" />
       <source src="https://cdn.sublimevideo.net/vpa/ms_360p.webm" />
@@ -33,7 +29,7 @@
 
 		<!-- jquery -->
 		<script src="lib/jquery.2.0.3.min.js"></script>
-		<script type="text/javascript" src="https://cdn.sublimevideo.net/js/961fjrjb.js"></script>
+    <script type="text/javascript" src="https://cdn.sublimevideo.net/js/v6xdy9my.js"></script>
 		<script>
         //video
         // var elem = document.getElementById("video");
