--- a/video.html
+++ b/video.html
@@ -17,14 +17,20 @@
       <img src="images/button1.png" width="320" height="180" />
       <span class="zoom_icon"></span>
     </a>
-
-
-    <video id="a240e92d" class="sublime" poster="images/button1.png" width="640" height="360" tdata-settings="uid:demo-lightbox-custom-overlay-opacity; autoresize:fit;" title="Demo:     Lightbox, Custom overlay opacity" poster="images/button1.png" width="640" height="360"    preload="none" style="display:none">
+    
+    <video id="video1" data-settings="uid:demo-lightbox-custom-overlay-opacity; autoresize:fit;" title="Demo:     Lightbox, Custom overlay opacity" poster="images/button1.png" width="640" height="450"    preload="none" style="display:none">
+      <source src="https://media.sublimevideo.net/vpa/ms_360p.mp4" />
+      <source src="https://cdn.sublimevideo.net/vpa/ms_720p.mp4" data-quality="hd" />
+      <source src="https://media.sublimevideo.net/vpa/ms_360p.webm" />
+      <source src="https://cdn.sublimevideo.net/vpa/ms_720p.webm" data-quality="hd" />
+    </video>
+<!--     <video id="a240e92d" class="sublime" poster="images/button1.png" width="640" height="360" tdata-settings="uid:demo-lightbox-custom-overlay-opacity; autoresize:fit;" title="Demo:     Lightbox, Custom overlay opacity" poster="images/button1.png" width="640" height="360"    preload="none" style="display:none">
       <source src="https://cdn.sublimevideo.net/vpa/ms_360p.mp4" />
       <source src="https://cdn.sublimevideo.net/vpa/ms_720p.mp4" data-quality="hd" />
       <source src="https://cdn.sublimevideo.net/vpa/ms_360p.webm" />
       <source src="https://cdn.sublimevideo.net/vpa/ms_720p.webm" data-quality="hd" />
-    </video>
+    </video> -->
+
 
 
 		<!-- jquery -->
