--- a/video.html
+++ b/video.html
@@ -13,7 +13,7 @@
     <link href='style/style.css' rel='stylesheet' type='text/css'/>
 	</head>
 	<body>
-    <a class="sublime zoomable" href="#a240e92d" data-settings="overlay-opacity:0.9">
+    <a class="sublime zoomable" href="#video1" data-settings="overlay-opacity:0.9">
       <img src="images/button1.png" width="320" height="180" />
       <span class="zoom_icon"></span>
     </a>
