--- a/index.html
+++ b/index.html
@@ -38,11 +38,17 @@
         	  <h1><span>The Mobil 1</span><span>Track Experiment</span></h1>
             <div id='video-wrapper'>
               <!-- <video width="100%" height="100%" poster='images/play.png' controls id="video"> -->
-              <video width="200px" height="200px"  id="video">
-                <source src="video/Drive Around Australia-1.mp4" type="video/mp4">
-                <source src="video/Drive Around Australia-1.webm" type="video/webm">
+              <a class="sublime zoomable" href="#video1" data-settings="overlay-opacity:0.9">
+                <img src="images/button1.png" width="300" height="300" />
+                <span class="zoom_icon"></span>
+              </a>
+              <video id="video1" data-settings="uid:demo-lightbox-custom-overlay-opacity; autoresize:fit;" title="Demo:     Lightbox, Custom overlay opacity" poster="images/button1.png" width="640" height="450"    preload="none" style="display:none">
+                <source src="https://media.sublimevideo.net/vpa/ms_360p.mp4" />
+                <source src="https://cdn.sublimevideo.net/vpa/ms_720p.mp4" data-quality="hd" />
+                <source src="https://media.sublimevideo.net/vpa/ms_360p.webm" />
+                <source src="https://cdn.sublimevideo.net/vpa/ms_720p.webm" data-quality="hd" />
               </video>
-              <div id='play_btn'><img src='images/play_btn.png'/></div>
+              <!-- <div id='play_btn'><img src='images/play_btn.png'/></div> -->
             </div>
         	  <p>What happens when Jenson Button pushes the engine of his MP4-29 to extremes? What kind of sounds does it make? We won’t give it away, but we will say, it is beautiful.</p>
         	</div>
@@ -147,6 +153,8 @@
 		<!-- waypoints jQuery plugin by http://imakewebthings.com/ : http://imakewebthings.com/jquery-waypoints/ -->
 		<script src="lib/waypoints.min.js"></script>
 		<script src="lib/cbpFixedScrollLayout.min.js"></script>
+    <!-- video -->
+    <script type="text/javascript" src="https://cdn.sublimevideo.net/js/v6xdy9my.js"></script>
 		<script>
 			$(function() {
 				cbpFixedScrollLayout.init();
