--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         	  <h1><span>The Mobil 1</span><span>Track Experiment</span></h1>
             <div id='video-wrapper'>
               <!-- <video width="100%" height="100%" poster='images/play.png' controls id="video"> -->
-              <a class="sublime zoomable" href="#video1" data-settings="overlay-opacity:0.9">
+              <a class="sublime zoomable" href="#video1" data-settings="overlay-opacity:0.9" data-settings="close-button-position:right">
                 <img src="images/empty.png" width="300" height="300" />
                 <span class="playbtn"></span>
               </a>
