--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div id='video-wrapper'>
               <!-- <video width="100%" height="100%" poster='images/play.png' controls id="video"> -->
               <a class="sublime zoomable" href="#video1" data-settings="overlay-opacity:0.9" data-settings="close-button-position:right">
-                <img src="images/empty.png" width="300" height="300" />
+                <!-- <img src="images/empty.png" width="300" height="300" /> -->
                 <span class="playbtn"></span>
               </a>
               <video id="video1" data-settings="uid:demo-lightbox-custom-overlay-opacity; autoresize:fit;" title="Demo:     Lightbox, Custom overlay opacity" poster="images/empty.png" width="640" height="450"    preload="none" style="display:none">
