--- a/video.html
+++ b/video.html
@@ -15,7 +15,7 @@
 	<body>
     <div id='video-wrapper'>
       <!-- <video width="100%" height="100%" poster='images/play.png' controls id="video"> -->
-      <a class="sublime zoomable" href="#video1" data-settings="overlay-opacity:0.9" data-settings="close-button-position:right">
+      <a class="sublime zoomable" href="#video1" data-settings="close-button-position:right">
         <img src="images/empty.png" width="300" height="300" />
         <span class="playbtn"></span>
       </a>
