--- a/video.html
+++ b/video.html
@@ -28,6 +28,15 @@
       <!-- <div id='play_btn'><img src='images/play_btn.png'/></div> -->
     </div>
 
+    <a class="sublime zoomable" href="#video1" data-settings="close-button-position:right">
+      <img src="http://media.sublimevideo.net/vpa/ms_800.jpg" width="320" height="180" />
+      <span class="zoom_icon"></span>
+    </a>
+    
+    <video id="video1" data-settings="uid:demo-lightbox-close-button-position; autoresize:fit;" title="Demo:    Lightbox, Close button position" poster="http://media.sublimevideo.net/vpa/ms_800.jpg" width="640" height="360"   preload="none" style="display:none">
+      <source src="http://media.sublimevideo.net/vpa/ms_360p.mp4" />
+      <source src="http://media.sublimevideo.net/vpa/ms_360p.webm" />
+    </video>
 
 		<!-- jquery -->
 		<script src="lib/jquery.2.0.3.min.js"></script>
