--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                 <!-- <span class="playbtn"></span> -->
               </a>
               <video id="video1" data-settings="uid:demo-lightbox-custom-overlay-opacity; autoresize:fit;" title="Demo:     Lightbox, Custom overlay opacity" poster="images/empty.png" width="800" height="450"    preload="none" style="display:none">
-                <source src="https://media.sublimevideo.net/vpa/ms_360p.mp4" />
-                <source src="https://cdn.sublimevideo.net/vpa/ms_720p.mp4" data-quality="hd" />
-                <source src="https://media.sublimevideo.net/vpa/ms_360p.webm" />
-                <source src="https://cdn.sublimevideo.net/vpa/ms_720p.webm" data-quality="hd" />
+                <source src="video/Drive Around Australia-1.mp4" />
+                <!-- <source src="https://cdn.sublimevideo.net/vpa/ms_720p.mp4" data-quality="hd" /> -->
+                <source src="video/Drive Around Australia-1.webm" />
+                <!-- <source src="https://cdn.sublimevideo.net/vpa/ms_720p.webm" data-quality="hd" /> -->
               </video>
               <!-- <div id='play_btn'><img src='images/play_btn.png'/></div> -->
             </div>
