--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
-<!DOCTYPE html>
-<html lang="en" class="no-js">
+<!doctype html>
+<!--[if lt IE 7]>      <html class='no-js lt-ie9 lt-ie8 lt-ie7'> <![endif]-->
+<!--[if IE 7]>         <html class='no-js lt-ie9 lt-ie8'> <![endif]-->
+<!--[if IE 8]>         <html class='no-js lt-ie9'> <![endif]-->
+<!--[if gt IE 8]><!--> 
+<html class='no-js'> <!--<![endif]-->
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
@@ -10,8 +14,11 @@
   	<meta name='copyright' content='Exxon'>  
   	<link rel='shortcut icon' href='favicon.ico'>
   	<link href='lib/normalize.css' rel='stylesheet' type='text/css'/>
-  	<link href='style/style.css' rel='stylesheet' type='text/css'/>
-		<script src="lib/modernizr.custom.js"></script>
+		<!--[if IE 8]>  
+      <link rel="stylesheet" href="ie8.css">  
+    <![endif]-->  
+    <link href='style/style.css' rel='stylesheet' type='text/css'/>
+    <script src="lib/modernizr.custom.js"></script>
 	</head>
 	<body>
 		<header>
