--- a/slider.html
+++ b/slider.html
@@ -9,7 +9,7 @@
     <meta name='copyright' content='Exxon'>  
     <link rel='shortcut icon' href='favicon.ico'>
     <link href='lib/normalize.css' rel='stylesheet' type='text/css'/>
-    <link href='style/style.css' rel='stylesheet' type='text/css'/>
+    <link href='style/canvas.css' rel='stylesheet' type='text/css'/>
     <script src="lib/modernizr.custom.js"></script>
     <script type="text/javascript">
         var can, ctx, image, slider, knob, mouseIsDown, knobMid;
