--- a/slider2.html
+++ b/slider2.html
@@ -9,7 +9,7 @@
   <meta name='copyright' content='Exxon'>  
   <link rel='shortcut icon' href='favicon.ico'>
   <link href='lib/normalize.css' rel='stylesheet' type='text/css'/>
-  <link href='style/style.css' rel='stylesheet' type='text/css'/>
+  <link href='style/canvas.css' rel='stylesheet' type='text/css'/>
   <script type="text/javascript">
       var can, ctx, vid, play, vidTimer, mouseIsDown = 0,
           knobMid, pixData, pixels, knobX = 100;
