--- a/slider3.html
+++ b/slider3.html
@@ -9,7 +9,7 @@
     <meta name='copyright' content='Exxon'>  
     <link rel='shortcut icon' href='favicon.ico'>
     <link href='lib/normalize.css' rel='stylesheet' type='text/css'/>
-    <link href='style/style.css' rel='stylesheet' type='text/css'/>
+    <link href='style/canvas.css' rel='stylesheet' type='text/css'/>
 </head>
 <body onload="init()" style="background-color:#e0e0e0">
     <h2>Animation with Sound</h2>
