--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 		<script src="lib/waypoints.min.js"></script>
 		<script src="lib/cbpFixedScrollLayout.min.js"></script>
     <!-- video -->
-    // <script type="text/javascript" src="https://cdn.sublimevideo.net/js/v6xdy9my.js"></script>
+    <script type="text/javascript" src="https://cdn.sublimevideo.net/js/v6xdy9my.js"></script>
 		<script>
 			$(function() {
 				  cbpFixedScrollLayout.init();
