--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 				</nav>
 				<section id="fbsection1">
 					<div class='content-layer'>
+            <img class='onlyie' src='images/phase1-1.png'/>
         	  <h1>The Sound of Performance</h1>
             <!-- <h1>Few things are sweeter to the ear than a sweetly beating engine.</h1> -->
         	  <p>Ask any driver and they’ll say that that nothing sounds sweeter than a well-tuned engine humming on all cylinders. A symphony of tappets, camshafts and pistons well lubricated and singing a sweet mechanical tune. Whether on the street or the track, drivers recognize these delightful sounds with Mobil 1, the World’s No.1 Synthetic Motor Oil. And it’s always music to their ears.</p>
@@ -42,6 +43,7 @@
 				</section>
 				<section id="fbsection2">
 					<div class='content-layer'>
+            <img class='onlyie' src='images/phase2-1.png'/>
         	  <h1><span>The Mobil 1</span><span>Track Experiment</span></h1>
             <div id='video-wrapper'>
               <!-- <video width="100%" height="100%" poster='images/play.png' controls id="video"> -->
@@ -62,6 +64,7 @@
 				</section>
 				<section id="fbsection3">
 					<div class='content-layer'>
+            <img class='onlyie' src='images/phase3-1.png'/>
        		  <h1><span class='left'>Jenson</span><span class='middle'>Knows</span><span class='right'>the Sound</span></h1>
        		  <p id='parag1'>Whether during F1 testing, or on the last lap of the last race of the year, Jenson Button knows a thing or two about how an engine should sound.</p>
             <p id='parag2'>His new MP4-29 uses Mobil 1, the only lubricant the McLaren team trusts to take the extreme abuse of grueling F1 tracks around the world.</p>
@@ -69,6 +72,7 @@
 				</section>
 				<section id="fbsection4">
           <div class='content-layer'>
+            <img class='onlyie' src='images/phase5-1.png'/>
             <h1>The Sounds of Mobil 1</h1>
             <p>There are beautiful sounds your engine should make, and then there’s everything else. Let’s hear the difference. Click on either side of this engine to hear how it runs with Mobil 1. And without Mobil 1.</p>
             <h2><span class='left'>Mobil1</span><span class='middle'>X</span><span class='right'>Engine without engine oil.</span></h2>
@@ -76,6 +80,7 @@
         </section>
 				<section id="fbsection5">
 					<div class='content-layer'>
+            <img class='onlyie' src='images/phase6-1.png'/>
           	<h1>There are other engine oils. And then there’s Mobil 1</h1>
           	<p>Nothing works harder to keep your car, truck, van or SUV running more smoothly than Mobil 1. As the world's leading synthetic engine oil, <strong>it features a proprietary Multi-Layer Anti-Wear Technology that provides performance beyond conventional engine oils.</strong>This technology allows Mobil 1 to match and exceed the toughest expectations of Japanese, European and U.S. car builders, and provides exceptional protection even in the most extreme conditions.</p>
           	<ul>
@@ -161,7 +166,7 @@
 		<script src="lib/waypoints.min.js"></script>
 		<script src="lib/cbpFixedScrollLayout.min.js"></script>
     <!-- video -->
-    <script type="text/javascript" src="https://cdn.sublimevideo.net/js/v6xdy9my.js"></script>
+    <!-- // <script type="text/javascript" src="https://cdn.sublimevideo.net/js/v6xdy9my.js"></script> -->
 		<script>
 			$(function() {
 				  cbpFixedScrollLayout.init();
