--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				</section>
 				<section id="fbsection3">
 					<div class='content-layer'>
-       		  <h1><span class='left'>Jenson</span><span class='middle'>Knows</span><span class='right'>the Sound</span></h1>
+       		  <h1><span class='left'>Jenson</span><span class='middle'>knows</span><span class='right'>the Sound</span></h1>
        		  <p id='parag1'>Whether during F1 testing, or on the last lap of the last race of the year, Jenson Button knows a thing or two about how an engine should sound.</p>
             <p id='parag2'>His new MP4-29 uses Mobil 1, the only lubricant the McLaren team trusts to take the extreme abuse of grueling F1 tracks around the world.</p>
        		</div>
