--- a/index.html
+++ b/index.html
@@ -76,64 +76,64 @@
           	<h1>There are other engine oils. And then there’s Mobil 1</h1>
           	<p>Nothing works harder to keep your car, truck, van or SUV running more smoothly than Mobil 1. As the world's leading synthetic engine oil, <strong>it features a proprietary Multi-Layer Anti-Wear Technology that provides performance beyond conventional engine oils.</strong>This technology allows Mobil 1 to match and exceed the toughest expectations of Japanese, European and U.S. car builders, and provides exceptional protection even in the most extreme conditions.</p>
           	<ul>
-            	<a href=''>
+            	<a id='tab1' href=''>
             	  <img id='btn1' class='buttons' src='images/button1.png'/>
             	  <li>
-            	    <img id='tab1' class='tabs' src='images/tab1.png'/>
+            	    <img class='tabs' src='images/tab1.png'/>
             	  </li>
             	</a>
-              <a href=''>
+              <a id='tab2' href=''>
                 <img id='btn2' class='buttons' src='images/button2.png'/>
                 <li>
-                  <img id='tab2' class='tabs' src='images/tab2.png'/>
+                  <img class='tabs' src='images/tab2.png'/>
                 </li>
               </a>
-              <a href=''>
+              <a id='tab3' href=''>
                 <img id='btn3' class='buttons' src='images/button3.png'/>
                 <li>
-                  <img id='tab3' class='tabs' src='images/tab3.png'/>
+                  <img class='tabs' src='images/tab3.png'/>
                 </li>
               </a>
-              <a href=''>
+              <a id='tab4' href=''>
                 <img id='btn4' class='buttons' src='images/button4.png'/>
                 <li>
-                  <img id='tab4' class='tabs' src='images/tab4.png'/>
+                  <img class='tabs' src='images/tab4.png'/>
                 </li>
               </a>
-              <a href=''>
+              <a id='tab5' href=''>
                 <img id='btn5' class='buttons' src='images/button5.png'/>
                 <li>
-                  <img id='tab5' class='tabs' src='images/tab5.png'/>
+                  <img class='tabs' src='images/tab5.png'/>
                 </li>
               </a>
-              <a href=''>
+              <a id='tab6' href=''>
                 <img id='btn6' class='buttons' src='images/button6.png'/>
                 <li>
-                  <img id='tab6' class='tabs' src='images/tab6.png'/>
+                  <img class='tabs' src='images/tab6.png'/>
                 </li>
               </a>
-              <a href=''>
+              <a id='tab7' href=''>
                 <img id='btn7' class='buttons' src='images/button7.png'/>
                 <li>
-                  <img id='tab7' class='tabs' src='images/tab7.png'/>
+                  <img class='tabs' src='images/tab7.png'/>
                 </li>
               </a>
-              <a href=''>
+              <a id='tab8' href=''>
                 <img id='btn8' class='buttons' src='images/button8.png'/>
                 <li>
-                  <img id='tab8' class='tabs' src='images/tab8.png'/>
+                  <img class='tabs' src='images/tab8.png'/>
                 </li>
               </a>
-              <a href=''>
+              <a id='tab9' href=''>
                 <img id='btn9' class='buttons' src='images/button9.png'/>
                 <li>
-                  <img id='tab9' class='tabs' src='images/tab9.png'/>
+                  <img class='tabs' src='images/tab9.png'/>
                 </li>
               </a>
-              <a href=''>
+              <a id='tab10' href=''>
                 <img id='btn10' class='buttons' src='images/button10.png'/>
                 <li>
-                  <img id='tab10' class='tabs' src='images/tab10.png'/>
+                  <img class='tabs' src='images/tab10.png'/>
                 </li>
               </a>
               
