--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <!-- <img src="images/empty.png" width="300" height="300" /> -->
                 <!-- <span class="playbtn"></span> -->
               </a>
-              <video id="video1" data-settings="uid:demo-lightbox-custom-overlay-opacity; autoresize:fit;" title="Demo:     Lightbox, Custom overlay opacity" poster="images/empty.png" width="800" height="450"    preload="none" style="display:none">
+              <video id="video1" data-settings="uid:demo-lightbox-custom-overlay-opacity; autoresize:fit;" poster="images/empty.png" width="800" height="450" preload="none" style="display:none">
                 <source src="video/Drive Around Australia-1.mp4" />
                 <!-- <source src="https://cdn.sublimevideo.net/vpa/ms_720p.mp4" data-quality="hd" /> -->
                 <source src="video/Drive Around Australia-1.webm" />
