reverse video link

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 		<script src="lib/cbpFixedScrollLayout.min.js"></script>
     <script src="lib/PIE.js"></script>
     <!-- video -->
-    <!-- // <script type="text/javascript" src="https://cdn.sublimevideo.net/js/v6xdy9my.js"></script> -->
+    <script type="text/javascript" src="https://cdn.sublimevideo.net/js/v6xdy9my.js"></script>
 		<script>
 			$(function() {
 				  cbpFixedScrollLayout.init();
