--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <!--[if lte IE 8]>
       <script src="lib/jquery.2.0.3.min.js"></script>
       <script src="lib/jquery.corner.js"></script>
+      <script src="lib/jquery.easing.min.js"></script>
+      <script src="lib/waypoints.min.js"></script>
+      <script src="lib/cbpFixedScrollLayout.min.js"></script>
+      <script src="lib/PIE.js"></script>
       <script>
       $(function(){
           console.log('ieie');
