--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 		<div class="container">
 			<div id="cbp-fbscroller" class="cbp-fbscroller">
 				<nav>
-					<a id='nav1' href="#fbsection1" class="cbp-fbcurrent"><img src='images/unselected.png'/><span>Performance</span></a>
-					<a id='nav2' href="#fbsection2"><img src='images/unselected.png' /><span>Experiment</span></a>
-					<a id='nav3' href="#fbsection3"><img src='images/unselected.png' /><span>Jenson.Button</span></a>
-					<a id='nav4' href="#fbsection4"><img src='images/unselected.png' /><span>Sound.of.mobil1</span></a>
-					<a id='nav5' href="#fbsection5"><img src='images/unselected.png' /><span>Motor.oils</span></a>
+					<a id='nav1' href="#fbsection1" class="cbp-fbcurrent"><img src='images/selected.png'/><span>Performance</span></a>
+					<a id='nav2' href="#fbsection2"><img src='images/selected.png' /><span>Experiment</span></a>
+					<a id='nav3' href="#fbsection3"><img src='images/selected.png' /><span>Jenson.Button</span></a>
+					<a id='nav4' href="#fbsection4"><img src='images/selected.png' /><span>Sound.of.mobil1</span></a>
+					<a id='nav5' href="#fbsection5"><img src='images/selected.png' /><span>Motor.oils</span></a>
 				</nav>
 				<section id="fbsection1">
 					<div class='content-layer'>
