update sound equalizer

--- a/index.html
+++ b/index.html
@@ -70,6 +70,82 @@
             <h1>The Sounds of Mobil 1</h1>
             <p>There are beautiful sounds your engine should make, and then there’s everything else. Let’s hear the difference. Click on either side of this engine to hear how it runs with Mobil 1. And without Mobil 1.</p>
             <h2><span class='left'>Mobil1</span><span class='middle'>X</span><span class='right'>Engine without engine oil.</span></h2>
+            <div id='bg_left'></div>
+            <div id='bg_right'></div>
+            <div id="flashContent_left">
+              <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="400" height="200" id="engine" align="  middle" z-index='10000000'>
+                <param name="movie" value="engine.swf" />
+                <param name="quality" value="high" />
+                <param name="bgcolor" value="#ffffff" />
+                <param name="play" value="true" />
+                <param name="loop" value="true" />
+                <param name="wmode" value="transparent" />
+                <param name="scale" value="showall" />
+                <param name="menu" value="true" />
+                <param name="devicefont" value="false" />
+                <param name="salign" value="" />
+                <param name="allowScriptAccess" value="sameDomain" />
+                <param name="flashvars" value="type=2" />
+                <!--[if !IE]>-->
+                <object type="application/x-shockwave-flash" data="engine.swf" width="400" height="200">
+                  <param name="movie" value="engine.swf" />
+                  <param name="quality" value="high" />
+                  <param name="bgcolor" value="#ffffff" />
+                  <param name="play" value="true" />
+                  <param name="loop" value="true" />
+                  <param name="wmode" value="transparent" />
+                  <param name="scale" value="showall" />
+                  <param name="menu" value="true" />
+                  <param name="devicefont" value="false" />
+                  <param name="salign" value="" />
+                  <param name="allowScriptAccess" value="sameDomain" />
+                  <param name="flashvars" value="type=1" />
+                <!--<![endif]-->
+                  <a href="http://www.adobe.com/go/getflash">
+                    <img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe   Flash player" />
+                  </a>
+                <!--[if !IE]>-->
+                </object>
+                <!--<![endif]-->
+              </object>
+            </div>
+            <div id="flashContent_right">
+              <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="400" height="200" id="engine" align="  middle">
+                <param name="movie" value="engine.swf" />
+                <param name="quality" value="high" />
+                <param name="bgcolor" value="#ffffff" />
+                <param name="play" value="true" />
+                <param name="loop" value="true" />
+                <param name="wmode" value="transparent" />
+                <param name="scale" value="showall" />
+                <param name="menu" value="true" />
+                <param name="devicefont" value="false" />
+                <param name="salign" value="" />
+                <param name="allowScriptAccess" value="sameDomain" />
+                <param name="flashvars" value="type=2" />
+                <!--[if !IE]>-->
+                <object type="application/x-shockwave-flash" data="engine.swf" width="400" height="200">
+                  <param name="movie" value="engine.swf" />
+                  <param name="quality" value="high" />
+                  <param name="bgcolor" value="#ffffff" />
+                  <param name="play" value="true" />
+                  <param name="loop" value="true" />
+                  <param name="wmode" value="transparent" />
+                  <param name="scale" value="showall" />
+                  <param name="menu" value="true" />
+                  <param name="devicefont" value="false" />
+                  <param name="salign" value="" />
+                  <param name="allowScriptAccess" value="sameDomain" />
+                  <param name="flashvars" value="type=2" />
+                <!--<![endif]-->
+                  <a href="http://www.adobe.com/go/getflash">
+                    <img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe   Flash player" />
+                  </a>
+                <!--[if !IE]>-->
+                </object>
+                <!--<![endif]-->
+              </object>
+            </div>         
           </div>
         </section>
 				<section id="fbsection5">
