--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
 		<!-- waypoints jQuery plugin by http://imakewebthings.com/ : http://imakewebthings.com/jquery-waypoints/ -->
 		<script src="lib/waypoints.min.js"></script>
 		<script src="lib/cbpFixedScrollLayout.min.js"></script>
+    <script src="lib/PIE.js"></script>
     <!-- video -->
     <script type="text/javascript" src="https://cdn.sublimevideo.net/js/v6xdy9my.js"></script>
 		<script>
