update test file

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   	<link rel='shortcut icon' href='favicon.ico'>
   	<link href='lib/normalize.css' rel='stylesheet' type='text/css'/>
     <link href='style/style.css' rel='stylesheet' type='text/css'/>
+    <script src="lib/modernizr.custom.js"></script>
 	</head>
 	<body>
     <div id='layer'></div>
@@ -228,7 +229,6 @@
 		<!-- waypoints jQuery plugin by http://imakewebthings.com/ : http://imakewebthings.com/jquery-waypoints/ -->
 		<script src="lib/waypoints.min.js"></script>
 		<script src="lib/cbpFixedScrollLayout.min.js"></script>
-    <script src="lib/PIE.js"></script>
     <!-- video -->
     <script type="text/javascript" src="https://cdn.sublimevideo.net/js/v6xdy9my.js"></script>
 		<script>
