cleaned up code and added minify js

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
   	<meta name='description' content='Exxon F1 motorsport'>
   	<meta name='copyright' content='Exxon'>  
   	<link rel='shortcut icon' href='favicon.ico'>
-  	<link href='lib/normalize.css' rel='stylesheet' type='text/css'/>
-    <link href='style/style.css' rel='stylesheet' type='text/css'/>
-    <script src="lib/modernizr.custom.js"></script>
+    <link href='assets/style.min.css' rel='stylesheet' type='text/css'/>
 	</head>
 	<body>
     <div id='layer'></div>
@@ -41,18 +39,13 @@
 					<div class='content-layer'>
         	  <h1><span>The Mobil 1</span><span>Track Experiment</span></h1>
             <div id='video-wrapper'>
-              <!-- <video width="100%" height="100%" poster='images/play.png' controls id="video"> -->
-              <a class="sublime zoomable" href="#video1" data-settings="overlay-opacity:0.9" data-settings="close-button-position:right">
-                <!-- <img src="images/empty.png" width="300" height="300" /> -->
-                <!-- <span class="playbtn"></span> -->
-              </a>
+              <a class="sublime zoomable" href="#video1" data-settings="overlay-opacity:0.9" data-settings="close-button-position:right"></a>
               <video id="video1" data-settings="uid:demo-lightbox-custom-overlay-opacity; autoresize:fit;" poster="images/empty.png" width="800" height="450" preload="none" style="display:none">
                 <source src="video/Drive Around Australia-1.mp4" />
                 <!-- <source src="https://cdn.sublimevideo.net/vpa/ms_720p.mp4" data-quality="hd" /> -->
                 <source src="video/Drive Around Australia-1.webm" />
                 <!-- <source src="https://cdn.sublimevideo.net/vpa/ms_720p.webm" data-quality="hd" /> -->
               </video>
-              <!-- <div id='play_btn'><img src='images/play_btn.png'/></div> -->
             </div>
         	  <p>What happens when Jenson Button pushes the engine of his MP4-29 to extremes? What kind of sounds does it make? We won’t give it away, but we will say, it is beautiful.</p>
         	</div>
@@ -239,10 +232,6 @@
 		</div>
     <script src="assets/jquery.2.0.3.min.js"></script>
     <script src="assets/output.min.js"></script>
-		<!-- <script src="lib/jquery.2.0.3.min.js"></script>
-		<script src="lib/jquery.easing.min.js"></script>
-		<script src="lib/waypoints.min.js"></script>
-		<script src="lib/cbpFixedScrollLayout.min.js"></script> -->
     <!-- // <script type="text/javascript" src="https://cdn.sublimevideo.net/js/v6xdy9my.js"></script> -->
 		<script>
 			$(function() {
