--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   	<meta name='copyright' content='Exxon'>  
   	<link rel='shortcut icon' href='favicon.ico'>
     <link href='assets/style.min.css' rel='stylesheet' type='text/css'/>
+    <script src="assets/modernizr.custom.js"></script>
 	</head>
 	<body>
     <div id='layer'></div>
