--- a/index.html
+++ b/index.html
@@ -40,13 +40,17 @@
 					<div class='content-layer'>
         	  <h1><span>The Mobil 1</span><span>Track Experiment</span></h1>
             <div id='video-wrapper'>
-              <a class="sublime zoomable" href="#video1" data-settings="overlay-opacity:0.9" data-settings="close-button-position:right"></a>
+              <a class="sublime zoomable" ng-click='popupLayer = 2'>
+              <video id='video-player' width="720" height="405" controls ng-show='popupLayer == 2'>
+                <source src="video/Drive-Around-Australia-1.mp4" type="video/mp4">
+              </video>
+              <!-- <a class="sublime zoomable" href="#video1" data-settings="overlay-opacity:0.9" data-settings="close-button-position:right"></a>
               <video id="video1" data-settings="uid:demo-lightbox-custom-overlay-opacity; autoresize:fit;" poster="images/empty.png" width="800" height="450" preload="none" style="display:none">
                 <source src="video/Drive Around Australia-1.mp4" />
-                <!-- <source src="https://cdn.sublimevideo.net/vpa/ms_720p.mp4" data-quality="hd" /> -->
+                <source src="https://cdn.sublimevideo.net/vpa/ms_720p.mp4" data-quality="hd" />
                 <source src="video/Drive Around Australia-1.webm" />
-                <!-- <source src="https://cdn.sublimevideo.net/vpa/ms_720p.webm" data-quality="hd" /> -->
-              </video>
+                <source src="https://cdn.sublimevideo.net/vpa/ms_720p.webm" data-quality="hd" />
+              </video> -->
             </div>
         	  <p>What happens when Jenson Button pushes the engine of his MP4-29 to extremes? What kind of sounds does it make? We won’t give it away, but we will say, it is beautiful.</p>
         	</div>
