--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  	<title>exxon_motorsport</title>
+  	<title>Exxon motorsport</title>
   	<meta name='keywords' content='Exxon F1 motorsport'>
   	<meta name='description' content='Exxon F1 motorsport'>
   	<meta name='copyright' content='Exxon'>  
@@ -237,17 +237,6 @@
 		<script>
 			$(function() {
 				  cbpFixedScrollLayout.init();
-
-
-          $('#openVideoBtn').click(function() {
-              $('#popup-video').addClass('open');
-              $('body').addClass('popup');
-          });
-
-          $('#closeVideoBtn').click(function() {
-              $('#popup-video').removeClass('open');
-              $('body').removeClass('popup');
-          });
 			});
     </script>
 	</body>
