put fixed background layer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="assets/modernizr.custom.js"></script>
 	</head>
 	<body>
-    <!-- <div id='layer'></div> -->
+    <div id='fixedlayer'></div>
 		<header>
 			<img src='images/header.jpg'>
 		</header>
@@ -233,7 +233,6 @@
 		</div>
     <script src="assets/jquery.2.0.3.min.js"></script>
     <script src="assets/output.min.js"></script>
-    <!-- // <script type="text/javascript" src="https://cdn.sublimevideo.net/js/v6xdy9my.js"></script> -->
 		<script>
 			$(function() {
 				  cbpFixedScrollLayout.init();
